# obs-vban

./: CMakeLists.txt  README.md
.github/containers/fedora-common/: build.sh
.github/containers/fedora-template/: Dockerfile
.github/workflows/: clang-format.yml  docker-build.yml  main.yml
ci/: forum-update-info.json  plugin.spec
ci/macos/: change-rpath.sh
data/: vban-output.lua
data/locale/: en-US.ini
installer/: installer-Windows.iss.in
packaging/debian/: changelog  control  copyright
packaging/fedora/: obs-studio-plugin-vban.spec
src/: frame-interleave-filter.c  plugin-macros.h.in  plugin-main.c  resolve-thread.c  resolve-thread.h  socket.h  vban-filter.c  vban-output-internal.h  vban-output-thread.c  vban-output.c  vban-source.c  vban-udp-instance.c  vban-udp-internal.h  vban-udp-thread.c  vban-udp.h
vban/: vban.h
